fixed button layout on small screens and prevented sort buttons wrapping on multiple lines

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -294,7 +294,7 @@ html, body {
 	color: rgba(255, 255, 255, 0.5);
 }
 
-@media (max-width: 400px) {
+@media (max-width: 410px) {
 	body, html {
 		margin: 0;
 	}
@@ -306,7 +306,11 @@ html, body {
 
 	.game-details {
 		display: block;
-		width: calc(100% - 20px);
+		width: calc(100% - 20px - 3.5em);
+		margin-top: 0;
+	}
+
+	.view-stats {
 		margin-top: 0;
 	}
 }
@@ -359,6 +363,7 @@ html, body {
 .sort.bb-button {
     font-size: 0.7em;
     opacity: 0.4;
+    white-space: nowrap;
 }
 
 .sort.bb-button.active {
